--- a/notebooks/02 - model dev - pure transformer.ipynb
+++ b/notebooks/02 - model dev - pure transformer.ipynb
@@ -19,8 +19,6 @@
    ],
    "source": [
     "import torch\n",
-    "import torchaudio\n",
-    "import torchvision\n",
     "# import sys, os\n",
     "# from dotenv import load_dotenv\n",
     "# load_dotenv()\n",
@@ -29,14 +27,10 @@
     "from torch.utils import tensorboard as tb\n",
     "from auem.data.datasets import DCASE2020Task1aDataset\n",
     "from torch.utils.data import DataLoader\n",
-    "from auem.models.simplenn import SimpleNN\n",
     "from auem.models.audiotransformer import SimpleTransformerEncoderClassifier\n",
     "from torch.optim import AdamW\n",
-    "from torch.nn import CrossEntropyLoss, NLLLoss\n",
+    "from torch.nn import NLLLoss\n",
     "\n",
-    "from torch.nn.functional import softmax\n",
-    "from torch.nn import Transformer, Linear, Module\n",
-    "import torchaudio\n",
     "\n",
     "batch_size = 16\n",
     "device = \"cuda\""
@@ -73,9 +67,11 @@
     }
    ],
    "source": [
-    "ds = DCASE2020Task1aDataset(split_df_path=\"/home/const/Projects/data/dcase2020/task1a/TAU-urban-acoustic-scenes-2020-mobile-development/evaluation_setup/fold1_train.csv\",\n",
-    "                            metadata_df_path=\"/home/const/Projects/data/dcase2020/task1a/TAU-urban-acoustic-scenes-2020-mobile-development/meta.csv\",\n",
-    "                            data_root=\"/home/const/Projects/data/dcase2020/task1a/TAU-urban-acoustic-scenes-2020-mobile-development/\")\n",
+    "ds = DCASE2020Task1aDataset(\n",
+    "    split_df_path=\"/home/const/Projects/data/dcase2020/task1a/TAU-urban-acoustic-scenes-2020-mobile-development/evaluation_setup/fold1_train.csv\",\n",
+    "    metadata_df_path=\"/home/const/Projects/data/dcase2020/task1a/TAU-urban-acoustic-scenes-2020-mobile-development/meta.csv\",\n",
+    "    data_root=\"/home/const/Projects/data/dcase2020/task1a/TAU-urban-acoustic-scenes-2020-mobile-development/\",\n",
+    ")\n",
     "\n",
     "train_size = int(0.8 * len(ds))\n",
     "valid_size = len(ds) - train_size\n",
@@ -95,8 +91,8 @@
     "# # model = Transformer(d_model=128).to(device)\n",
     "# class TC(Module):\n",
     "#     def __init__(self):\n",
-    "#         super(TC, self).__init__() \n",
-    "#         self.transformer = Transformer(d_model=128, \n",
+    "#         super(TC, self).__init__()\n",
+    "#         self.transformer = Transformer(d_model=128,\n",
     "#                                        nhead=8,\n",
     "#                                        num_encoder_layers=1,\n",
     "#                                        num_decoder_layers=1,\n",
@@ -131,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = iter(dl_train).next()['X'].permute(0,1,3,2).squeeze().to('cuda')"
+    "x = iter(dl_train).next()[\"X\"].permute(0, 1, 3, 2).squeeze().to(\"cuda\")"
    ]
   },
   {
@@ -151,7 +147,7 @@
     }
    ],
    "source": [
-    "x.permute(1,0,2).shape"
+    "x.permute(1, 0, 2).shape"
    ]
   },
   {
@@ -221,19 +217,26 @@
     "for epoch in range(4):\n",
     "    print(f\"epoch {epoch}\")\n",
     "    model.train()\n",
-    "#     for batch_num, batch in tqdm(enumerate(dl_train), total=ceil(len(dl_train)/batch_size), desc=\"Batch\"):\n",
+    "    #     for batch_num, batch in tqdm(enumerate(dl_train), total=ceil(len(dl_train)/batch_size), desc=\"Batch\"):\n",
     "    for batch_num, batch in enumerate(dl_train):\n",
-    "        X, y = batch[\"X\"].permute(1,0,3,2).squeeze().to(device), batch[\"label\"].to(device)\n",
+    "        X, y = (\n",
+    "            batch[\"X\"].permute(1, 0, 3, 2).squeeze().to(device),\n",
+    "            batch[\"label\"].to(device),\n",
+    "        )\n",
     "        optimizer.zero_grad()\n",
     "        output = model(X)\n",
     "        loss = criterion(output, y)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        step += 1\n",
-    "        writer.add_scalar(\"accuracy\", (y==output.argmax(dim=1)).float().mean().detach().to(\"cpu\"), global_step=step)\n",
+    "        writer.add_scalar(\n",
+    "            \"accuracy\",\n",
+    "            (y == output.argmax(dim=1)).float().mean().detach().to(\"cpu\"),\n",
+    "            global_step=step,\n",
+    "        )\n",
     "        writer.add_scalar(\"loss\", loss.item(), global_step=step)\n",
     "# writer.add_embedding(output.to(\"cpu\"), metadata=y.tolist(), global_step=batch_num)#, label_img=batch['X'])\n",
-    "        # writer.add_image('epoch/5', batch['X'], global_step=batch_num, dataformats='NCHW')"
+    "# writer.add_image('epoch/5', batch['X'], global_step=batch_num, dataformats='NCHW')"
    ]
   },
   {
@@ -279,7 +282,7 @@
    "source": [
     "# x = iter(dl_train).next()['X'].to('cuda')\n",
     "%pylab inline\n",
-    "imshow(pos_enc, aspect='auto', interpolation='none')"
+    "imshow(pos_enc, aspect=\"auto\", interpolation=\"none\")"
    ]
   },
   {
@@ -366,15 +369,16 @@
     "from ipywidgets import GridspecLayout, Button, Layout\n",
     "import jp_proxy_widget\n",
     "\n",
-    "widget = jp_proxy_widget.JSProxyWidget(layout=Layout(grid_area='widget012'))\n",
+    "widget = jp_proxy_widget.JSProxyWidget(layout=Layout(grid_area=\"widget012\"))\n",
     "\n",
     "js = \"https://unpkg.com/wavesurfer.js\"\n",
-    "js2=\"https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.spectrogram.min.js\"\n",
+    "js2 = \"https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.spectrogram.min.js\"\n",
     "url = \"https://ia902606.us.archive.org/35/items/shortpoetry_047_librivox/song_cjrg_teasdale_64kb.mp3\"\n",
     "\n",
     "widget.load_js_files([js, js2])\n",
     "\n",
-    "widget.js_init(\"\"\"\n",
+    "widget.js_init(\n",
+    "    \"\"\"\n",
     "element.empty();\n",
     "\n",
     "element.wavesurfer = WaveSurfer.create({\n",
@@ -401,7 +405,9 @@
     "element.wavesurfer.on('ready', function () {\n",
     "    element.wavesurfer.pause();\n",
     "});\n",
-    "\"\"\", url=url)\n",
+    "\"\"\",\n",
+    "    url=url,\n",
+    ")\n",
     "\n",
     "widget"
    ]
@@ -443,10 +449,9 @@
     }
    ],
    "source": [
-    " \n",
-    "#It would probably make sense to wire up these commands to upywidgets buttons...\n",
+    "# It would probably make sense to wire up these commands to upywidgets buttons...\n",
     "widget.element.wavesurfer.pause()\n",
-    "#widget.element.wavesurfer.play(0)"
+    "# widget.element.wavesurfer.play(0)"
    ]
   },
   {
@@ -479,25 +484,28 @@
     }
    ],
    "source": [
-    "from ipywidgets import GridspecLayout, Button, Layout\n",
+    "from ipywidgets import Layout\n",
     "\n",
     "grid = GridspecLayout(4, 3)\n",
     "ws = []\n",
     "for i in range(4):\n",
     "    for j in range(3):\n",
-    "        widget = jp_proxy_widget.JSProxyWidget(layout=Layout(grid_area='widget012'))\n",
+    "        widget = jp_proxy_widget.JSProxyWidget(layout=Layout(grid_area=\"widget012\"))\n",
     "\n",
     "        js = \"https://unpkg.com/wavesurfer.js\"\n",
-    "        js2=\"https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.spectrogram.min.js\"\n",
-    "        js3=\"https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.minimap.min.js\"\n",
-    "        js4=\"https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.cursor.min.js\"\n",
-    "#         js5=\"https://raw.githubusercontent.com/BlaiMelendezCatalan/BAT/master/annotation_tool/js/annotator/src/wavesurfer.drawer.extended.js\"\n",
+    "        js2 = (\n",
+    "            \"https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.spectrogram.min.js\"\n",
+    "        )\n",
+    "        js3 = \"https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.minimap.min.js\"\n",
+    "        js4 = \"https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.cursor.min.js\"\n",
+    "        #         js5=\"https://raw.githubusercontent.com/BlaiMelendezCatalan/BAT/master/annotation_tool/js/annotator/src/wavesurfer.drawer.extended.js\"\n",
     "        url = \"https://ia902606.us.archive.org/35/items/shortpoetry_047_librivox/song_cjrg_teasdale_64kb.mp3\"\n",
     "\n",
     "        widget.load_js_files([js, js2, js3, js4])\n",
-    "#         widget.load_js_files([js, js2])\n",
+    "        #         widget.load_js_files([js, js2])\n",
     "\n",
-    "        widget.js_init(\"\"\"\n",
+    "        widget.js_init(\n",
+    "            \"\"\"\n",
     "        \n",
     "        element.empty();\n",
     "\n",
@@ -537,7 +545,9 @@
     "        element.wavesurfer.on('ready', function () {\n",
     "            element.wavesurfer.pause();\n",
     "        });\n",
-    "        \"\"\", url=url)\n",
+    "        \"\"\",\n",
+    "            url=url,\n",
+    "        )\n",
     "        grid[i, j] = widget\n",
     "        ws.append(widget)\n",
     "grid"
@@ -561,9 +571,8 @@
     }
    ],
    "source": [
-    "import random\n",
     "for w in ws:\n",
-    "#     w.element.wavesurfer.play(random.randint(0, 4))\n",
+    "    #     w.element.wavesurfer.play(random.randint(0, 4))\n",
     "    w.element.wavesurfer.pause()"
    ]
   },
@@ -575,8 +584,8 @@
    "source": [
     "from audiowidget.base import WaveSurferJP\n",
     "from jp_proxy_widget import watcher\n",
-    "from IPython.display import HTML, display\n",
-    "from ipywidgets import GridspecLayout, Button, Layout, Play, jslink, Box"
+    "from IPython.display import display\n",
+    "from ipywidgets import GridspecLayout, Layout, Box"
    ]
   },
   {
@@ -594,9 +603,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ap = WaveSurferJP(layout=Layout(width='95%', height='100%'))\n",
+    "ap = WaveSurferJP(layout=Layout(width=\"95%\", height=\"100%\"))\n",
     "\n",
-    "playpause = Button(description='', icon='fa-play', value=False, disabled=False, button_style='', layout=Layout(width='5%', height='100%'))\n",
+    "playpause = Button(\n",
+    "    description=\"\",\n",
+    "    icon=\"fa-play\",\n",
+    "    value=False,\n",
+    "    disabled=False,\n",
+    "    button_style=\"\",\n",
+    "    layout=Layout(width=\"5%\", height=\"100%\"),\n",
+    ")\n",
     "# play = Button(description='', icon='fa-play', value=False, disabled=False, button_style='', layout=Layout(width='5%', height='100%'))\n",
     "# pause = Button(description='', icon='fa-pause', value=False, disabled=False, button_style='', layout=Layout(width='5%', height='100%'))\n",
     "playpause.on_click(ap.playPause)\n",
@@ -638,8 +654,15 @@
     "ws = []\n",
     "for i in range(4):\n",
     "    for j in range(3):\n",
-    "        ap = WaveSurferJP(layout=Layout(width='95%', height='100%'))\n",
-    "        playpause = Button(description='', icon='fa-play', value=False, disabled=False, button_style='', layout=Layout(width='5%', height='20%', min_width='30px'))\n",
+    "        ap = WaveSurferJP(layout=Layout(width=\"95%\", height=\"100%\"))\n",
+    "        playpause = Button(\n",
+    "            description=\"\",\n",
+    "            icon=\"fa-play\",\n",
+    "            value=False,\n",
+    "            disabled=False,\n",
+    "            button_style=\"\",\n",
+    "            layout=Layout(width=\"5%\", height=\"20%\", min_width=\"30px\"),\n",
+    "        )\n",
     "        playpause.on_click(ap.playPause)\n",
     "        widget = Box([playpause, ap])\n",
     "        grid[i, j] = widget\n",
