fix: fix typo in batch size variable and add noqa comment

--- a/notebooks/02 - model dev - pure transformer.ipynb
+++ b/notebooks/02 - model dev - pure transformer.ipynb
@@ -41,7 +41,7 @@
     "train_ds, valid_ds = torch.utils.data.random_split(ds, [train_size, valid_size])\n",
     "\n",
     "dl_train = DataLoader(train_ds, batch_size=batch_size)\n",
-    "dl_valid = DataLoader(valid_ds, batch_size=bzatch_size)\n",
+    "dl_valid = DataLoader(valid_ds, batch_size=batch_size)\n",
     "model = SimpleTransformerEncoderClassifier(128, 10, \"log_softmax\").to(device)"
    ]
   },
@@ -189,7 +189,7 @@
    "source": [
     "# x = iter(dl_train).next()['X'].to('cuda')\n",
     "%pylab inline\n",
-    "imshow(pos_enc, aspect=\"auto\", interpolation=\"none\")"
+    "imshow(pos_enc, aspect=\"auto\", interpolation=\"none\") # noqa"
    ]
   },
   {
