refactor: add confusion matrix callback and typing improvements
The main changes in this commit: 1. Added new ConfusionCallback class to
log confusion matrices during training 2. Updated type hints throughout
codebase to use modern Python syntax (|, Path) 3. Added comments for
unused training scripts 4. Fixed imports to use traincore instead of
auem package

Let me write a concise commit message that captures these changes:

``` Add confusion callback and improve typing

- Add ConfusionCallback for logging confusion matrices during training -
Update type hints to use Python 3.10+ syntax - Fix deprecated imports
from auem package - Add optional plot utils dependencies ```

--- a/notebooks/02 - model dev - pure transformer.ipynb
+++ b/notebooks/02 - model dev - pure transformer.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "# sys.path.append(os.environ.get(\"path_to_auem\"))\n",
     "from torch.utils import tensorboard as tb\n",
-    "from auem.data.datasets import DCASE2020Task1aDataset\n",
+    "from traincore.data.sets import DCASE2020Task1aDataset\n",
     "from torch.utils.data import DataLoader\n",
-    "from auem.models.audiotransformer import SimpleTransformerEncoderClassifier\n",
+    "from traincore.models.audiotransformer import SimpleTransformerEncoderClassifier\n",
     "from torch.optim import AdamW\n",
     "from torch.nn import NLLLoss\n",
     "\n",
